--- a/package.json
+++ b/package.json
@@ -20,7 +20,12 @@
     "@angular/platform-browser": "~8.1.3",
     "@angular/platform-browser-dynamic": "~8.1.3",
     "@angular/router": "~8.1.3",
-    "firebase": "^6.6.0",
+    "bootstrap": "^4.3.1",
+    "firebase": "^6.6.1",
+    "firebaseui": "^4.2.0",
+    "firebaseui-angular": "^4.0.0",
+    "jquery": "^3.4.1",
+    "popper.js": "^1.15.0",
     "rxjs": "~6.4.0",
     "tslib": "^1.9.0",
     "zone.js": "~0.9.1"
