--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "firebaseui": "^4.2.0",
     "firebaseui-angular": "^4.0.0",
     "jquery": "^3.4.1",
+    "ngx-cookie-service": "^2.2.0",
     "popper.js": "^1.15.0",
     "rxjs": "~6.4.0",
     "tslib": "^1.9.0",
