--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "ngx-cookie-service": "^2.2.0",
     "popper.js": "^1.15.0",
     "rxjs": "~6.4.0",
+    "sweetalert": "^2.1.2",
     "tslib": "^1.9.0",
     "zone.js": "~0.9.1"
   },
