--- a/angular.json
+++ b/angular.json
@@ -20,7 +20,7 @@
             "tsConfig": "tsconfig.app.json",
             "aot": false,
             "assets": [
-              "src/favicon.ico",
+              "src/note.ico",
               "src/assets"
             ],
             "styles": [
